--- a/app/src/main/res/layout/activity_new_donation.xml
+++ b/app/src/main/res/layout/activity_new_donation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,169 +7,176 @@
     tools:context=".New_donation"
     android:orientation="vertical"
     android:background="@color/lightgrey">
-    <ImageButton
-        android:id="@+id/new_donations_back_button"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@color/lightgrey"
-        android:src="@drawable/backingicon" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/relativeLayout4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:text="Food Details:"
-        android:fontFamily="@font/fonttop"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
-        android:textSize="18sp"/>
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal">
+        <Button
+            android:id="@+id/new_donations_back_button"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:background="@android:color/transparent"
+            android:drawableStart="@drawable/ic_circle" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_reg"
+            android:text="Food Details"
+            android:layout_marginStart="70dp"
+            android:layout_gravity="center_vertical"
+            android:textColor="#FF9843"
+            android:textSize="23dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
+        tools:ignore="MissingConstraints">
+
         <EditText
             android:id="@+id/itemName"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@null"
             android:layout_marginLeft="20dp"
-            android:paddingLeft="20dp"
-            android:inputType="text"
-            android:singleLine="true"
             android:layout_marginRight="20dp"
             android:hint="Item Name"
-            android:textSize="16sp"/>
-    </androidx.cardview.widget.CardView>
+            android:inputType="text"
+            android:paddingLeft="20dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal">
         <EditText
             android:id="@+id/timeOfPreparation"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:paddingLeft="20dp"
-            android:background="@null"
-            android:inputType="datetime"
-            android:singleLine="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:hint="Time of Preparation"
-            android:textSize="16sp"/>
-    </androidx.cardview.widget.CardView>
+            android:inputType="datetime"
+            android:paddingLeft="20dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal">
         <EditText
             android:id="@+id/quantity"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:paddingLeft="20dp"
-            android:background="@null"
-            android:inputType="number"
-            android:singleLine="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:hint="Quantity"
-            android:textSize="16sp"/>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal">
+            android:inputType="number"
+            android:paddingLeft="20dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
+
         <EditText
             android:id="@+id/address"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:paddingLeft="20dp"
-            android:background="@null"
             android:gravity="top|left"
+            android:hint="Address"
             android:inputType="textMultiLine"
+            android:lines="2"
             android:overScrollMode="always"
+            android:paddingLeft="20dp"
             android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
-            android:lines="2"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:scrollHorizontally="false"
-            android:hint="Address"/>
-    </androidx.cardview.widget.CardView>
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/fonttop"
-        android:text="Utensils Required?"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="2dp"
-        android:id="@+id/required">
-        <RadioButton android:id="@+id/yes"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
+        tools:ignore="MissingConstraints">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-8dp"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:text="Yes"/>
-        <RadioButton android:id="@+id/no"
+            android:fontFamily="@font/fonttop"
+            android:text="Utensils Required?"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
+        tools:ignore="MissingConstraints">
+
+        <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-8dp"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:text="No"/>
-    </RadioGroup>
-    <Button
-        android:id="@+id/submit_new_donation"
-        android:layout_width="290dp"
-        android:layout_height="50dp"
-        android:textSize="14sp"
-        android:textAllCaps="false"
-        android:layout_marginTop="30dp"
-        android:text="Submit"
-        android:layout_gravity="center_horizontal"
-        android:paddingLeft="44dp"
-        android:paddingRight="44dp"
-        android:background="@drawable/turquoise_button"/>
+            android:orientation="horizontal"
+            android:id="@+id/required">
 
-    <FrameLayout
-        android:id="@+id/iconButton"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="320dp"
-        android:layout_marginTop="30dp"
-        >
-        <ImageView
-            android:layout_width="50dp"
+        <RadioButton
+            android:id="@+id/yes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="Yes" />
+
+        <RadioButton
+            android:id="@+id/no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No" />
+        </RadioGroup>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp">
+
+        <Button
+            android:id="@+id/submit_new_donation"
+            android:layout_width="290dp"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/profileicon"
-            android:background="@color/iconBackground"
-            />
-    </FrameLayout>
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/roundstyle"
+            android:paddingLeft="44dp"
+            android:paddingRight="44dp"
+            android:text="Submit"
+            android:textAllCaps="false"
+            android:textSize="14sp"
 
-</LinearLayout>
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
